# RustChat

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
frontend/: .env  package.json  pnpm-lock.yaml
frontend/src/: main.tsx
frontend/src/components/: SignUp.tsx
frontend/src/lib/: api_client.ts  firebaseConfig.ts  user.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20240523_134310_create_users_table.rs
src/: errors.rs  main.rs
src/db/: connection.rs
src/entities/: user.rs
src/handlers/: users.rs
src/routes/: messages.rs  mod.rs  users.rs
