[package]
name = "rustchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0.202", features = ["derive"] }


